--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -26,20 +26,23 @@
       <b><span>Protein Name:</span></b>
       {{ wrapper.data.proteinName }}
     </p>
-    <p *ngIf="wrapper.data.expressionLevel"
-      class="has-tooltip-right" data-tooltip="Expression level in selected tissue, transcripts per million">
+    <p *ngIf="wrapper.data.expressionLevel">
       <b><span>Expression Level:</span></b>
-      {{ wrapper.data.expressionLevel | number : '1.0-3'  }} tpm
+      <span class="has-tooltip-right" data-tooltip="Expression level in selected tissue, transcripts per million">
+        {{ wrapper.data.expressionLevel | number : '1.0-3'  }} tpm
+      </span>
     </p>
-    <p *ngIf="wrapper.data.expressionLevelScore"
-       class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)">
+    <p *ngIf="wrapper.data.expressionLevelScore">
       <b><span>Expression Score:</span></b>
-      {{ wrapper.data.expressionLevelScore | number : '1.0-3'  }}
+      <span class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)">
+        {{ wrapper.data.expressionLevelScore | number : '1.0-3'  }}
+      </span>
     </p>
-    <p *ngIf="wrapper.data.mutationScore"
-       class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
+    <p *ngIf="wrapper.data.mutationScore">
       <b><span>Mutation Score:</span></b>
-      {{ wrapper.data.mutationScore | number : '1.0-3'  }}
+      <span class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
+        {{ wrapper.data.mutationScore | number : '1.0-3'  }}
+      </span>
     </p>
     <p *ngIf="nodeDegree">
       <b><span>Node Degree:</span></b>
@@ -93,20 +96,23 @@
       <b><span>Protein Name:</span></b>
         {{ wrapper.data.proteinName }}
     </p>
-    <p *ngIf="wrapper.data.expressionLevel"
-      class="has-tooltip-right" data-tooltip="Expression level in selected tissue, transcripts per million">
+    <p *ngIf="wrapper.data.expressionLevel">
       <b><span>Expression Level:</span></b>
-      {{ wrapper.data.expressionLevel | number : '1.0-3'  }} tpm
+      <span class="has-tooltip-right" data-tooltip="Expression level in selected tissue, transcripts per million">
+        {{ wrapper.data.expressionLevel | number : '1.0-3'  }} tpm
+      </span>
     </p>
-    <p *ngIf="wrapper.data.expressionLevelScore"
-       class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)">
+    <p *ngIf="wrapper.data.expressionLevelScore">
       <b><span>Expression Score:</span></b>
-      {{ wrapper.data.expressionLevelScore | number : '1.0-3'  }}
+      <span> class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)"
+        {{ wrapper.data.expressionLevelScore | number : '1.0-3'  }}
+      </span>
     </p>
-    <p *ngIf="wrapper.data.mutationScore"
-       class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
+    <p *ngIf="wrapper.data.mutationScore">
       <b><span>Mutation Score:</span></b>
-      {{ wrapper.data.mutationScore | number : '1.0-3'  }}
+      <span class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
+        {{ wrapper.data.mutationScore | number : '1.0-3'  }}
+      </span>
     </p>
     <p *ngIf="nodeDegree">
       <b><span>Node Degree:</span></b>
@@ -167,27 +173,35 @@
       {{ nodeDegree }}
     </p>
 
-    <p *ngIf="wrapper.data.isNutraceutical">
-      <b>Is Nutraceutical: </b> <span class="icon is-small"><i class="fas fa-check"></i></span>
-    </p>
-    <p *ngIf="!wrapper.data.isNutraceutical">
-      <b>Is Nutraceutical: </b> <span class="icon is-small"><i class="fas fa-times"></i></span>
-    </p>
-
-    <p *ngIf="wrapper.data.isAtcAntineoplasticAndImmunomodulatingAgent"
-       class="has-tooltip-right" data-tooltip="ATC Class L antineoplastic and immunomodulating agents">
-      <b>ATC L: </b> <span class="icon is-small"><i class="fas fa-check"></i></span>
-    </p>
-    <p *ngIf="!wrapper.data.isAtcAntineoplasticAndImmunomodulatingAgent"
-       class="has-tooltip-right" data-tooltip="ATC Class L antineoplastic and immunomodulating agents">
-      <b>ATC L: </b> <span class="icon is-small"><i class="fas fa-times"></i></span>
+    <p>
+      <b>Is Nutraceutical: </b> 
+      <span class="icon is-small">
+        <i class="fas fa-check"
+        [class.fa-times] = "!wrapper.data.isNutraceutical"
+        [class.fa-check] = "wrapper.data.isNutraceutical"
+        ></i>
+      </span>
     </p>
 
-    <p *ngIf="wrapper.data.inCancernet">
-      <b>In Cancernet: </b> <span class="icon is-small"><i class="fas fa-check"></i></span>
+    <p>
+      <b>ATC L: </b> 
+      <span class="icon is-small" class="has-tooltip-right" 
+      data-tooltip="ATC Class L antineoplastic and immunomodulating agents">
+        <i class="fas" 
+        [class.fa-times] = "!wrapper.data.isAtcAntineoplasticAndImmunomodulatingAgent"
+        [class.fa-check] = "wrapper.data.isAtcAntineoplasticAndImmunomodulatingAgent"
+        ></i>
+      </span>
     </p>
-    <p *ngIf="!wrapper.data.inCancernet">
-      <b>In Cancernet: </b> <span class="icon is-small"><i class="fas fa-times"></i></span>
+
+    <p>
+      <b>In Cancernet: </b> 
+      <span class="icon is-small">
+        <i class="fas"
+        [class.fa-times] = "!wrapper.data.inCancernet"
+        [class.fa-check] = "wrapper.data.inCancernet"
+        ></i>
+      </span>
     </p>
   </div>
 
