fix type in quick target search tooltip

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -606,7 +606,7 @@
                   <div class="column is-half has-text-centered small-padding">
                     <button (click)="exampleSearch('drug-target'); closeSummary();"
                             class="button is-example is-fullwidth has-tooltip"
-                            data-tooltip="Find drug targets for the all cancer driver genes&#013; or selected genes.">
+                            data-tooltip="Find drug targets the cancer driver genes&#013; or selected genes.">
                     <span>
                       Quick Target Search
                     </span>
