add scroll top button when detail view is shown and user is not on top of sidebar where detail view is being displayed

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -182,7 +182,14 @@
       </div>
     </div>
 
-    <div class="caddie sidebar bar-left">
+    <div class="caddie sidebar bar-left" id="left-sidebar">
+
+      <app-button-scroll-top
+      *ngIf="leftSidebarScrollTopButton"
+      [buttonText]="'Go to top'"
+      (callbackFun)="leftSidebarScrollTopButton = $event"
+    >
+    </app-button-scroll-top>
 
       <div *ngIf="selectedWrapper" class="column is-12 info-background">
         <!-- Start Detail View -->
