--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -4,6 +4,7 @@ $navbar-height: 80px;
 $row-data-selector-height: auto;
 $network-footer-height: 75px;
 $network-header-height: 50px;
+$analysis-result-header-height: 48px;
 
 $navbar-background-color: #143d1f;//#86D16B;//#D0D8D2;//#F5F0F5;
 
