--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
     </div>
 
     <div class="navbar-menu" [class.is-active]="mobileWindowExpanded">
-      <div class="navbar-start">
+      <div class="navbar-start"></div>
+      <div class="navbar-end">
         <a routerLink="/" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: true}" class="navbar-item is-hoverable has-text-light">
           <span class="icon"><i class="fa fa-home"></i></span>
           <span>Home</span>
@@ -22,6 +23,10 @@
         <a routerLink="/drug-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
           <span class="icon"><i class="fa fa-search"></i></span>
           <span>Drug</span>
+        </a>
+        <a routerLink="/gene-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
+          <span class="icon"><i class="fa fa-search"></i></span>
+          <span>Gene</span>
         </a>
 <!--        <a routerLink="/cite" routerLinkActive="is-active" class="navbar-item is-hoverable">-->
 <!--          <span class="icon"><i class="fa fa-feather"></i></span>-->
@@ -36,15 +41,7 @@
           <span>About</span>
         </a>
       </div>
-      <div class="navbar-end">
-        <div class="navbar-item has-text-light">
-          <div class="field is-grouped">
-            <p class="control">
-               Version 1.0
-            </p>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </nav>
 </div>
