--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
     </div>
 
     <div class="navbar-menu" [class.is-active]="mobileWindowExpanded">
-      <div class="navbar-start"></div>
+      <div class="navbar-start">
+        <!-- <h3 class="is-3 title logo-letters navbar-item"><i>CADDIE</i></h3> -->
+      </div>
       <div class="navbar-end">
         <a routerLink="/" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: true}" class="navbar-item is-hoverable has-text-light">
           <span class="icon"><i class="fa fa-home"></i></span>
