--- a/src/app/pages/explorer-page/components/sidebar/sidebar.component.scss
+++ b/src/app/pages/explorer-page/components/sidebar/sidebar.component.scss
@@ -18,3 +18,18 @@
     background-color: rgba(216,140,0, 0.1)
   }
 }
+
+.small-padding {
+  padding: 0.25rem;
+}
+
+.card-footer {
+  font-size: 12px;
+  a {
+    padding: 3px;
+  }
+}
+
+.info {
+  font-size: 12px;
+}
