--- a/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
+++ b/src/app/pages/explorer-page/components/analysis-panel/analysis-panel.component.scss
@@ -56,3 +56,7 @@ div.network {
   font-size: 10px;
   width: 10px;
 }
+
+#geneCountsPlotContainer, #nodeDegreePlotContainer, #drugCountsPlotContainer {
+  overflow-x: scroll;
+}
