--- a/src/app/components/cookie-disclaimer/cookie-disclaimer.component.html
+++ b/src/app/components/cookie-disclaimer/cookie-disclaimer.component.html
@@ -1,5 +1,10 @@
-<div class="notification is-primary is-light">
-    <button class="delete"></button>
-    Primar lorem ipsum dolor sit amet, consectetur
-    adipiscing elit lorem ipsum dolor. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur.
+<div *ngIf="!accepted" class="notification is-primary is-light caddie-cookie-disclaimer">
+    <!-- <button class="delete"></button> -->
+    <h5 class="title is-5">Data Privacy</h5>
+    This website stores only data that is required in order to provide you with a fully functional service. No personal data is collected.
+    <br>
+    <br>
+    <button class="button is-primary" (click)="accept()">Got it</button>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button class="button is-primary" (click)="informationLink()">I want to know more</button>
 </div>      
