--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -41,18 +41,13 @@
 
       <div class="text-box is-hidden-mobile">
         <h1 class="subtitle is-3">
-          Explore the cancer driver gene interactome
+          Explore the interactome of {{ cancerDriverGenesN }} cancer driver genes.
         </h1>
         <h1 class="subtitle is-3">
-          Find putative drug targets
+          Use detailed information from {{ genesN }} genes to find putative drug targets.
         </h1>
         <h1 class="subtitle is-3">
-          Repurpose drugs
-        </h1>
-        <h1 class="subtitle is-3">
-          {{ cancerDriverGenesN }} Cancer Driver Genes <br>
-          {{ genesN }} Genes <br>
-          {{ drugsN }} Drugs <br>
+          Repurpose drugs from {{ drugsN }} drugs using network biology algorithms.
         </h1>
       </div>
     </div>
