add vcf example + start documentation + remove mutation score from result table + fix bug with quick search

--- a/src/app/components/category-selector/category-selector.component.html
+++ b/src/app/components/category-selector/category-selector.component.html
@@ -1,4 +1,4 @@
-<div class="footer-buttons dropdown is-up" [class.is-active]="expanded">
+<div class="footer-buttons dropdown is-up is-right" [class.is-active]="expanded">
   <div class="dropdown-trigger">
     <button (click)="expanded=!expanded"
             class="button is-primary" [class.is-outlined]="!selectedElement"
