--- a/src/app/pages/explorer-page/components/sidebar/dialogs/vcf-input/vcf-input.component.html
+++ b/src/app/pages/explorer-page/components/sidebar/dialogs/vcf-input/vcf-input.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="field">
-          <label for="file">Choose a file (VCF 4.1, 4.2)</label>
+          <label for="file">Choose a file (VCF 4.1, 4.2) like this <a href="assets/vcf-example-file.vcf" download>example file</a></label>
           <div class="control">
             <input type="file"
                    id="file"
