--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -1,4 +1,4 @@
-<div class="is-hidden-mobile">
+<!-- <div class="is-hidden-mobile"> -->
   <div class="caddie explorer">
     <app-sidebar></app-sidebar>
     <div class="caddie right-window" id="loadingOverlayTarget">
@@ -25,9 +25,9 @@
       </div>
     </div>
   </div>
-</div>
-<div class="is-hidden-tablet mobile-fallback">
+<!-- </div> -->
+<!-- <div class="is-hidden-tablet mobile-fallback">
   Sorry, caddie is not available for mobile phones. To find information about
   caddie, please check the <a routerLink="/about">About</a> page or visit this
   page with another device with a larger screen.
-</div>
+</div> -->
