--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <div class="content landing scroll">
   <div class="container has-text-centered">
     <div class="column">
-      <div class="logo-box is-hidden-mobile">
+      <div class="logo-box">
         <img src="assets/caddie_logo.png" style="height: 300px">
       </div>
 
@@ -21,7 +21,7 @@
       </div>
       -->
 
-      <div class="button-box is-hidden-mobile">
+      <div class="button-box">
         <button class="button has-text-info is-large  ">
           <a routerLink="/explorer" routerLinkActive="is-active">
             <span class="icon"><i class="fa fa-project-diagram has-text-info"></i></span>
@@ -30,7 +30,7 @@
         </button>
       </div>
 
-      <div class="text-box is-hidden-mobile">
+      <div class="text-box">
         <h1 class="subtitle is-3">
           Explore the interactome of {{ cancerDriverGenesN }} cancer driver genes.
         </h1>
