--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <!-- <h3 class="is-3 title logo-letters navbar-item"><i>CADDIE</i></h3> -->
       </div>
       <div class="navbar-end">
-        <a routerLink="/" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: true}" class="navbar-item is-hoverable has-text-light">
+        <a routerLink="/" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact: true}" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-home"></i></span>
           <span>Home</span>
         </a>
@@ -22,11 +22,11 @@
           <span class="icon"><i class="fa fa-project-diagram"></i></span>
           <span>Explorer</span>
         </a>
-        <a routerLink="/drug-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
+        <a routerLink="/drug-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-search"></i></span>
           <span>Drug</span>
         </a>
-        <a routerLink="/gene-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
+        <a routerLink="/gene-lookup" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-search"></i></span>
           <span>Gene</span>
         </a>
@@ -34,11 +34,15 @@
 <!--          <span class="icon"><i class="fa fa-feather"></i></span>-->
 <!--          <span>Cite</span>-->
 <!--        </a>-->
-<!--        <a routerLink="/download" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">-->
+<!--        <a routerLink="/download" routerLinkActive="is-active" class="navbar-item is-hoverable">-->
 <!--          <span class="icon"><i class="fa fa-download"></i></span>-->
 <!--          <span>Download</span>-->
 <!--        </a>-->
-        <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable has-text-light">
+        <!-- <a routerLink="/documentation" routerLinkActive="is-active" class="navbar-item is-hoverable">
+          <span class="icon"><i class="fa fa-book"></i></span>
+          <span>Documentation</span>
+        </a> -->
+        <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-question"></i></span>
           <span>About</span>
         </a>
